Changes with Apache 1.3.21

  *) Update the mime.types file to map video/vnd.mpegurl to mxu
     and add commonly used audio/x-mpegurl for m3u extensions.
     [Heiko Recktenwald <uzs106@uni-bonn.de>, Lars Eilebrecht]

  *) Modified mod_mime and mod_negotiation to prevent mod_negotiation 
     from serving any multiview variant containing one or more 
     'unknown' filename extensions. In PR #8130, mod_negotiation was 
     incorrectly serving index.html.zh.Big5 when better variants were 
     available. The httpd.conf file on the failing server did not have 
     an AddLanguage directive for .zh, which caused mod_mime to loose
     the file_type information it gleened from parsing the .html
     extension. The absence of any language preferences, either in
     the browser or configured on the server, caused mod_negotiation
     to consider all the variants equivalent. When that occurs, 
     mod_negotiation picks the 'smallest' variant available, which
     just happened to be  index.html.zh.Big5.
     [Bill Stoddard, Bill Rowe] PR #8130

  *) Security: Close autoindex /?M=D directory listing hole reported
     in bugtraq id 3009.  In some configurations where multiviews and 
     indexes are enabled for a directory, requesting URI /?M=D could
     result in a directory listing being returned to the client rather
     than the negotiated index.html variant that was configured and
     expected.  The work around for this problem (for pre 1.3.21
     releases) is to disable Indexes or Multiviews in the affected
     directories. [Bill Stoddard, Bill Rowe]

  *) Enabled Win32/OS2/Netware file paths (not / rooted, but c:/ rooted)
     as arguments for mod_vhost_alias'es directives.  [William Rowe]

  *) Changes for Win32 to assure mod_unique_id's UNIQUE_ID strings really
     are unique between threads.  [William Rowe]

  *) mod_proxy - fix for Pragma: nocache (HTTP/1.0 only)
     [Kim Bisgaard <kib@dmi.dk>] PR #5668
